--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,22 @@
 <h1>Savage Worlds Funnels</h1>
 <div>
   <ul>
+    <li>"Funnel" as in the Dungeon Crawl Classics (DCC) and old school RPG concept of "start with a bunch of level-0 adventurers. One survivor per player advances to level 1.</li>
+    <li>This is RNG, so refresh to make more.</li>
+  </ul>
+</div>
+<div>
+  <p>Expected rules:</p>
+  <ul>
     <li>Characters are extras.</li>
     <li>All trait rolls are d4.</li>
     <li>Profession-relevant trait rolls are made at d6.</li>
     <li>Do not roll a wild die.</li>
     <li>Start with 0 bennies.</li>
   </ul>
+  <p>Based on the Savage Worlds Deluxe USS Kaine adventure, this should result in about a 12.5% survival rate for the final fight assuming no bennies are spent. If you want a 30% survival rate, grant either 1 benny or 1 wound. If you want a 50% survival rate, grant both.</p>
+  <p>I suspect the actual survival rate will be much higher.</p>
 </div>
-
 <hr />
 <app-character></app-character>
 <hr />
