--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<a href="/characters/test">Characters</a>
+<h1><a routerLink="/explanation">Explanation</a> | <a routerLink="/characters/*">Generate</a></h1>
+<hr />
 <router-outlet></router-outlet>
