--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<h1><a routerLink="/explanation">Explanation</a> | <a routerLink="/characters/*">Generate</a></h1>
+<h1>
+  <a routerLink="/explanation">Explanation</a>
+  |
+  <a routerLink="/characters/west-marches/*">West Marches</a>
+  |
+  <a routerLink="/characters/50-fathoms/*">50 Fathoms</a>
+</h1>
 <hr />
 <router-outlet></router-outlet>
