--- a/src/app/characters/fifty-fathoms/character/character.component.html
+++ b/src/app/characters/fifty-fathoms/character/character.component.html
@@ -4,13 +4,13 @@
       <b>{{profession.race.name}} {{profession.occupation}}</b> (<a href="{{profession.referenceUrl}}">info</a>)
       <br/>
       {{profession.race.summary}}
-      <ul>
-        <li *ngFor="let edge of profession.race.edges">
-          <b>⁺ {{edge.name}} </b><span>{{edge.summary}}</span>
-        </li>
-        <li *ngFor="let hindrance of profession.race.hindrances">
-          <b> ⁻ {{hindrance.name}} </b><span>{{hindrance.summary}}</span>
-        </li>
+      <ul class="horizontal-list">
+        <span *ngFor="let edge of profession.race.edges">
+          <b>⁺&nbsp;{{edge.name}}</b><app-expando [label]="'ⓘ'"><br/>{{edge.summary}}<br /></app-expando>
+        </span>
+        <span *ngFor="let hindrance of profession.race.hindrances">
+          <b> ⁻&nbsp;{{hindrance.name}}</b><app-expando [label]="'ⓘ'"><br/>{{hindrance.summary}}<br /></app-expando>
+        </span>
       </ul>
     </li>
     <li *ngIf="profession.items.length == 0">Carrying nothing</li>
@@ -21,16 +21,16 @@
       </ul>
     </li>
     <li *ngFor="let hindrance of hindrances">
-      <b> ⁻ {{hindrance.name}} </b><span>{{hindrance.summary}}</span>
+      <b> ⁻&nbsp;{{hindrance.name}}</b><app-expando [label]="'ⓘ'"><br/>{{hindrance.summary}}</app-expando>
     </li>
     <li *ngFor="let edge of edges">
-      <b>⁺ {{edge.name}} </b><span>{{edge.summary}}</span>
+      <b>⁺&nbsp;{{edge.name}}</b><app-expando [label]="'ⓘ'"><br/>{{edge.summary}}</app-expando>
     </li>
     <li *ngIf="domain">
-      Your spell domain is <b>ₚ{{domain}}</b>.
+      Has spells. Domain is <b>ₚ{{domain}}</b>. Starts with 10pp and 3 spells.
       <ul>
         <li *ngFor="let power of powers">
-          <b>ₚ{{power.name}}</b> {{power.summary}}
+          <b>ₚ&nbsp;{{power.name}}</b><app-expando [label]="'ⓘ'"><br/>{{power.summary}}</app-expando>
         </li>
       </ul>
     </li>
