--- a/src/app/characters/fifty-fathoms/character/character.component.scss
+++ b/src/app/characters/fifty-fathoms/character/character.component.scss
@@ -8,5 +8,22 @@
 
 :host {
   margin: .5rem;
+  padding: .5rem;
   border: 1px solid black;
+  > div > ul {
+    padding: 0;
+  }
+}
+
+ul {
+  &:first-child { margin-top: 0; }
+  &:last-child { margin-bottom: 0; }
+}
+
+
+li {
+  list-style: none;
+}
+
+div {
 }
