--- a/src/app/utility/expando/expando.component.scss
+++ b/src/app/utility/expando/expando.component.scss
@@ -3,6 +3,7 @@ button {
   border: none;
   border-radius: 20px;
   padding: 0;
+  margin-left: 0.125rem;
   font-size: 1.25em;
   line-height: 1rem;
 }
