--- a/src/app/characters/fifty-fathoms/character/character.component.html
+++ b/src/app/characters/fifty-fathoms/character/character.component.html
@@ -1,9 +1,15 @@
 <div>
   <ul>
     <li>
-      <b>{{profession.race.name}} {{profession.occupation}}</b> (<a href="{{profession.referenceUrl}}">info</a>)
-      <br/>
-      {{profession.race.summary}}
+      <b>
+        <ng-container *ngIf="profession.race.name != 'Human'">{{profession.race.name}} </ng-container>
+        {{profession.occupation}}
+      </b>
+      <ng-container *ngIf="profession.referenceUrl"> (<a href="{{profession.referenceUrl}}">info</a>)</ng-container>
+      <app-expando [label]="'ⓘ'" [tooltip]="'click to expand'">
+        <br />
+        {{profession.race.summary}}
+      </app-expando>
       <ul class="horizontal-list">
         <span *ngFor="let edge of profession.race.edges">
           <b>⁺&nbsp;{{edge.name}}</b><app-expando [label]="'ⓘ'" [tooltip]="edge.summary"><br/>{{edge.summary}}<br /></app-expando>
