--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -14,6 +14,15 @@
         <li>Start with 2 extras on the front lines. The rest mill about uselessly.</li>
         <li>If an extra dies, replace with another of your extras.</li>
         <li>If all your extras die, take control of another player's extra. Their choice.</li>
+        <li>
+          Each player advances a single "Level 0" character to "Level 1" as follows:
+          <ul>
+            <li>Gain a Wild Die (default d6)</li>
+            <li>Gain Bennies at the start of each session (default 3)</li>
+            <li>Assign Attributes + Skills</li>
+            <li>Take an Advance</li>
+          </ul>
+        </li>
       </ul>
     </li>
     <li>Based on the Savage Worlds Deluxe USS Kaine adventure, this should result in about a 12.5% survival rate for the final fight assuming no bennies are spent. If you want a 30% survival rate, grant either 1 benny or 1 wound. If you want a 50% survival rate, grant both.</li>
