--- a/src/app/characters/characters/characters.component.html
+++ b/src/app/characters/characters/characters.component.html
@@ -1,4 +1,4 @@
-<app-character [seed]="seed + '-1'"></app-character>
+<app-character [seed]="seed + '-1'" [magicChance]="0.10"></app-character>
 <app-character [seed]="seed + '-2'"></app-character>
 <app-character [seed]="seed + '-3'"></app-character>
 <app-character [seed]="seed + '-4'"></app-character>
